--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "bstreeview",
   "version": "1.2.0",
   "description": "Bootstrap 4 simple treeview.",
-  "main": "[\"./dist/css/bstreeview.min.css\",\"./dist/js/bstreeview.min.js\"]",
+  "style": "dist/css/bstreeview.min.css",
+  "main": "dist/js/bstreeview.min.js",
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
